# display-quote

./: CMakeLists.txt  INSTALL  README
debian/: README.Debian  README.source  changelog  control  copyright  gbp.conf  manpage.1
scripts/: copy-template  xdfc  xdq
src/: CMakeLists.txt  archive.cpp  archive.hpp  collection.cpp  collection.hpp  dhammapada.cpp  dhammapada.hpp  factory.hpp  lines.cpp  lines.hpp  paragraph.cpp  paragraph.hpp  quotes.cpp  quotes.hpp  task.cpp  task.hpp  template.cpp  template.hpp  wiki.cpp  wiki.hpp
tool/: CMakeLists.txt  main.cpp
